--- a/server/html/css/style.css
+++ b/server/html/css/style.css
@@ -4,10 +4,6 @@
   padding: 0;
 }
 
-body {
-  overflow: hidden;
-}
-
 .section {
   display: flex;
   justify-content: center;
@@ -15,7 +11,8 @@ body {
   padding-top: 10vw;
   position: relative;
   min-height: 100vh;
-  background: linear-gradient(135deg, #111, #222, #111);
+  background: linear-gradient(135deg, rgba(17,17,17,.6), rgba(34,34,34, .6), rgba(17,17,17, .7));
+  pointer-events: none;
 }
 .section::before {
   content: '';
@@ -38,7 +35,8 @@ body {
     5px 5px 0 #ccc, 10px 10px 0 rgba(0, 0, 0, 0.2);
   animation: floating 5s ease-in-out infinite;
 }
-.section .section__title span {
+.section .section__title span, 
+.text-section p {
   text-shadow: 1px 1px 0 #ccc, 2px 2px 0 #ccc, 3px 3px 0 #ccc, 4px 4px 0 #ccc,
     5px 5px 0 #ccc, 6px 6px 0 #ccc, 7px 7px 0 #ccc, 8px 8px 0 #ccc,
     9px 9px 0 #ccc, 20px 20px 0 rgba(0, 0, 0, 0.2);
@@ -51,6 +49,30 @@ body {
   border-radius: 50%;
   box-shadow: 0 0 10px #fff, 0 0 20px #fff, 0 0 40px #fff, 0 0 80px #fff;
   animation: animate linear infinite;
+}
+
+.text-section, .video-section{
+  background-color: transparent;
+  position: absolute;
+  z-index: 10;
+  color: #fff;
+  text-align: center;
+  width: 100%;
+}
+.video-section{
+  top: 52vw;
+}
+
+.video-section video {
+  text-align: left;
+  width: 100%;
+  padding: 8%;
+}
+
+.text-description {
+  font-size: 36px;
+  padding: 0 8% 8%;
+  text-align: left;
 }
 
 @keyframes floating {
@@ -74,5 +96,181 @@ body {
   }
   100% {
     opacity: 0;
+  }
+}
+
+
+
+
+.deng-box {
+  position: fixed;
+  top: -40px;
+  right: -20px;
+  z-index: 999;
+}
+
+.deng-box1 {
+  position: fixed;
+  top: -30px;
+  right: 10px;
+  z-index: 999;
+}
+
+.deng-box1 .deng {
+  position: relative;
+  width: 120px;
+  height: 90px;
+  margin: 50px;
+  background: #d8000f;
+  background: rgba(216, 0, 15, 0.8);
+  border-radius: 50% 50%;
+  -webkit-transform-origin: 50% -100px;
+  -webkit-animation: swing 5s infinite ease-in-out;
+  box-shadow: -5px 5px 30px 4px rgba(252, 144, 61, 1);
+}
+
+.deng {
+  position: relative;
+  width: 120px;
+  height: 90px;
+  margin: 50px;
+  background: #d8000f;
+  background: rgba(216, 0, 15, 0.8);
+  border-radius: 50% 50%;
+  -webkit-transform-origin: 50% -100px;
+  -webkit-animation: swing 3s infinite ease-in-out;
+  box-shadow: -5px 5px 50px 4px rgba(250, 108, 0, 1);
+}
+
+.deng-a {
+  width: 100px;
+  height: 90px;
+  background: #d8000f;
+  background: rgba(216, 0, 15, 0.1);
+  margin: 12px 8px 8px 10px;
+  border-radius: 50% 50%;
+  border: 2px solid #dc8f03;
+}
+
+.deng-b {
+  width: 45px;
+  height: 90px;
+  background: #d8000f;
+  background: rgba(216, 0, 15, 0.1);
+  margin: -4px 8px 8px 26px;
+  border-radius: 50% 50%;
+  border: 2px solid #dc8f03;
+}
+
+.xian {
+  position: absolute;
+  top: -20px;
+  left: 60px;
+  width: 2px;
+  height: 20px;
+  background: #dc8f03;
+}
+
+.shui-a {
+  position: relative;
+  width: 5px;
+  height: 20px;
+  margin: -5px 0 0 59px;
+  -webkit-animation: swing 4s infinite ease-in-out;
+  -webkit-transform-origin: 50% -45px;
+  background: #ffa500;
+  border-radius: 0 0 5px 5px;
+}
+
+.shui-b {
+  position: absolute;
+  top: 14px;
+  left: -2px;
+  width: 10px;
+  height: 10px;
+  background: #dc8f03;
+  border-radius: 50%;
+}
+
+.shui-c {
+  position: absolute;
+  top: 18px;
+  left: -2px;
+  width: 10px;
+  height: 35px;
+  background: #ffa500;
+  border-radius: 0 0 0 5px;
+}
+
+.deng:before {
+  position: absolute;
+  top: -7px;
+  left: 29px;
+  height: 12px;
+  width: 60px;
+  content: " ";
+  display: block;
+  z-index: 999;
+  border-radius: 5px 5px 0 0;
+  border: solid 1px #dc8f03;
+  background: #ffa500;
+  background: linear-gradient(to right, #dc8f03, #ffa500, #dc8f03, #ffa500, #dc8f03);
+}
+
+.deng:after {
+  position: absolute;
+  bottom: -7px;
+  left: 10px;
+  height: 12px;
+  width: 60px;
+  content: " ";
+  display: block;
+  margin-left: 20px;
+  border-radius: 0 0 5px 5px;
+  border: solid 1px #dc8f03;
+  background: #ffa500;
+  background: linear-gradient(to right, #dc8f03, #ffa500, #dc8f03, #ffa500, #dc8f03);
+}
+
+.deng-t {
+  font-family: 华文行楷,Arial,Lucida Grande,Tahoma,sans-serif;
+  font-size: 3.1rem;
+  color: #dc8f03;
+  font-weight: bold;
+  line-height: 85px;
+  text-align: center;
+}
+
+.night .deng-t, 
+.night .deng-box, 
+.night .deng-box1 {
+  background: transparent !important;
+}
+
+@-moz-keyframes swing {
+  0% {
+      -moz-transform: rotate(-10deg)
+  }
+
+  50% {
+      -moz-transform: rotate(10deg)
+  }
+
+  100% {
+      -moz-transform: rotate(-10deg)
+  }
+}
+
+@-webkit-keyframes swing {
+  0% {
+      -webkit-transform: rotate(-10deg)
+  }
+
+  50% {
+      -webkit-transform: rotate(10deg)
+  }
+
+  100% {
+      -webkit-transform: rotate(-10deg)
   }
 }
