--- a/server/client/styles/bg.module.scss
+++ b/server/client/styles/bg.module.scss
@@ -7,6 +7,7 @@
 
 .background {
   background-image: url(https://s3-us-west-2.amazonaws.com/s.cdpn.io/221808/sky.jpg);
+  background-size: cover;
   display: block;
   position: fixed;
   top: 0;
